# ocaml-ezsqlite

./: Makefile  build.sh  choose_compartment_strategy.sh  ezsqlite-riscv.opam  ezsqlite.opam  install.sh  s.D
c_stubs/: Makefile
compartment_allocations/asm_files/: ezsqlite.s  ezsqlite_stubs.s  sqlite3_new.s
compartment_allocations/default_cap_files/: ezsqlite_cap_tee.ml  ezsqlite_stubs.cap  sqlite3_new.cap
compartment_allocations/strategy_1/: ezsqlite_cap_tee.ml  ezsqlite_stubs.cap  sqlite3_new.cap
lib/: .merlin  Makefile  a.out  config.h  dune  ezsqlite.ml  ezsqlite.mli  ezsqlite_stubs.c  org_dune  sqlite.diff  sqlite3_riscv_not_working.h  test.c
lib/test_only_c/: Makefile  a.out  c_kernel  c_kernel_riscv  config.h  config_riscv.h  craft.s  makefile  makefile_new  sqlite_test.c  sqlite_test.c.229r.expand  sqlite_test2.c  test.c
misaligned_load_problem/: log_4_07  log_4_11  problem_inspection.txt
test/: .merlin
