opam-version: "2.0"

maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko"]
license: "ISC"
homepage: "https://github.com/zshipko/ocaml-ezsqlite"
bug-reports: "https://github.com/zshipko/ocaml-ezsqlite/issues"
dev-repo: "git+https://github.com/zshipko/ocaml-ezsqlite.git"
doc: "https://zshipko.github.io/ocaml-ezsqlite/doc"
build: [
    ["dune" "build" "-x" "riscv" "-p" "ezsqlite" "-j" jobs]
    ["sh" "./build.sh"]
]
depends: [
    "dune" {build}
    "hex-riscv"
]

description:
  "Ezsqlite provides custom SQLite3 bindings and a familiar API for interacting with SQL datatypes in OCaml. Additionally, SQLite3 is compiled into Ezsqlite with many extensions enabled. For more information see https://github.com/zshipko/ocaml-ezsqlite"
